# download_bgt

./: .gitignore  README.md  config.yaml  download bgt.bat  download_bgt.spec  download_bgt_from_sharepoint.spec  download_budget.sh  environment.yml  pyproject.toml
2024/N2 2024/: 2024_11_18_aggregate.txt  2024_11_18_aggregate.xlsx
script/: download.py  gui.py  main.py
script/core/: config_loader.py  release_manager.py  sharepoint.py
script/gui/: app.py  components.py
script/utils/: constant.py  tools.py
